Gave the btn-content a width of 475px becuase it was jumping when the correct or incorrect icon was showing up. Changed some of the logic to only show border of correct on the first attempt and second and not when answer is revealed.

--- a/src/styles/QuizPage.css
+++ b/src/styles/QuizPage.css
@@ -15,6 +15,7 @@
 }
 
 .btn-content {
+  max-width: 475px;
   gap: 32px;
 }
 
